@@ -1,7 +1,7 @@
           Release Notes for NEdit Version 5.5, October 2004
 
 
-$Id: ReleaseNotes,v 1.62 2008/03/09 16:34:51 lebert Exp $
+$Id: ReleaseNotes,v 1.63 2008/08/20 14:57:35 lebert Exp $
 
 This file contains last minute notes to users about the release, which are not
 included in the documentation or README files included with the distribution
@@ -22,6 +22,10 @@ New Features in $NEXT_VERSION
 
 
 Bugs fixed in $NEXT_VERSION
+
+  - Force a terminating \n on macro file load time, to prevent syntax errors
+    with statements on the last line. (util/fileUtils.c:ReadMacroFile())
+    (SF bug #2038921)
 
   - Fix multiple memory leaks in interpret.c:PromoteToGlobal()
     (SF bug #1894726)
